--- a/src/app/components/qr/qr.component.html
+++ b/src/app/components/qr/qr.component.html
@@ -6,7 +6,7 @@
 
 <div class="container-fluid myQR">
     <div class="header">
-        <img src="./../assets/img/logo-grande-verde" alt="logo" class="logo">
+        <img src="./../assets/img/logo-grande-verde.png" alt="logo" class="logo">
         <div class="time">
             {{ timer }}
         </div>
