--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,46 +1,57 @@
 <div>
   <div class="container">
-    <img class="img" src="../../../assets/img/logo-grande-verde.png" alt="logo">
+    <img class="img" src="../../../assets/img/logo-grande-verde.png" alt="logo" width="300">
   </div>
-  <div class="container">
-    <form class="form">
-      <div class="window">
-        <div class="mb-3">
-          <label class="form-label">{{"DNI" | translate}}</label>
-          <input [(ngModel)]="dniLogin" name="dniLogin" type="text" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">{{"password" | translate}}</label>
-          <input [(ngModel)]="passwordLogin" name="passwordLogin" type="text" class="form-control" regexInput="[A-Z]*[a-z]*[0-9]*$">
-        </div>
-        <div class="mb-3">
-          <a class="openModal" data-bs-toggle="modal" data-bs-target="#exampleModal">{{"forgotPassword" | translate}}</a>
-          <br>
-          <a class="openModal" data-bs-toggle="modal" data-bs-target="#modal">{{"createAccount" | translate}}</a>
-        </div>
-        <div class="mb-3">
-          <button (click)="auth()" type="submit" class="btn">{{"send" | translate}}</button>
-          <button (click)="cancel()" type="submit" class="btn" routerLink="/main">{{"cancel" | translate}}</button>
+  <form [formGroup]="form" (ngSubmit)="auth()">
+    <div class="window">
+      <div class="mb-3">
+        <label class="form-label">{{"DNI" | translate}}</label>
+        <input #dniLogin formControlName="dniLogin" type="text" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">{{"password" | translate}}</label>
+        <div class="input-group mb-3">
+          <input id="passwordField" #passwordLogin formControlName="passwordLogin" type="password" class="form-control" regexInput="[A-Z]*[a-z]*[0-9]*$" required>
+          <div class="input-group-text">
+            <input class="form-check-input mt-0" type="checkbox" (click)="showPassword('passwordField')" class="toggle-password">
+          </div>
         </div>
       </div>
-    </form>
+      <div class="mb-3">
+        <a class="openModal" data-bs-toggle="modal" data-bs-target="#emailModal">{{"forgotPassword" | translate}}</a>
+        <br>
+        <a class="openModal" data-bs-toggle="modal" data-bs-target="#registerModal">{{"createAccount" | translate}}</a>
+      </div>
+      <div class="mb-3">
+        <button type="submit" class="btn" id="ToastBtnWrong">{{"login" | translate}}</button>
+        <button type="reset" class="btn">{{"cancel" | translate}}</button>
+      </div>
+    </div>
+  </form>
+</div>
+
+<!--WRONG TOAST-->
+<div id="WrongToast" class="toast align-items-center text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
+  <div class="d-flex">
+    <div class="toast-body">
+      {{"wrongCredencial" | translate}}
+    </div>
+    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
   </div>
 </div>
 
-<!--TOAST-->
-<div [(ngModel)]="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-  <div class="toast-header">
-    <strong class="me-auto">{{"attention" | translate}}</strong>
-    <small>Error</small>
-    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-  </div>
-  <div class="toast-body">
-    {{"wrongCredencial" | translate}}
+<!--SUCCESS TOAST-->
+<div id="successToast" class="toast align-items-center text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
+  <div class="d-flex">
+    <div class="toast-body">
+      {{"successCreate" | translate}}
+    </div>
+    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
   </div>
 </div>
 
 <!--Email modal-->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="emailModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" #eModal>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -49,17 +60,18 @@
       </div>
       <div class="modal-body">
         <input [(ngModel)]="emailLogin" name="emailLogin" type="email" class="form-control">
+        <p *ngIf="!isValid" style="color: red;">{{"noEmail" | translate}}</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn" data-bs-dismiss="modal">{{"cancel" | translate}}</button>
-        <button (click)="sendMail()" data-bs-dismiss="modal" type="button" class="btn">{{"send" | translate}}</button>
+        <button (click)="sendMail(emailLogin)" type="button" class="btn">{{"send" | translate}}</button>
       </div>
     </div>
   </div>
 </div>
 
 <!--Register modal-->
-<div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+<div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true" #rModal>
   <div class="modal-dialog">
     <div class="window">
       <div class="modal-content">
@@ -77,13 +89,18 @@
           <div class="mb-3 row">
             <label class="col-sm-2 col-form-label">{{"password" | translate}}</label>
             <div class="col-sm-10">
-              <input [(ngModel)]="password" name="password" placeholder="******" type="password" class="form-control" regexInput="^([a-z0-9A-Z]*[<>-´ç`+*^Ç¨_:;,.¡¿?'!|ºª@#·$%&¬/()=[]{}€]?)*$">
+              <div class="input-group mb-3">
+                <input id="createPasswordField" [(ngModel)]="password" name="password" placeholder="******" type="password" class="form-control" regexInput="^([a-z0-9A-Z]*[<>-´ç`+*^Ç¨_:;,.¡¿?'!|ºª@#·$%&¬/()=[]{}€]?)*$">
+                <div class="input-group-text">
+                  <input class="form-check-input mt-0" type="checkbox" (click)="showPassword('createPasswordField')" class="toggle-password">
+                </div>
+              </div>
             </div>
           </div>
           <div class="mb-3 row">
             <label class="col-sm-2 col-form-label">{{"account" | translate}}</label>
             <div class="col-sm-10">
-              <input [(ngModel)]="account" name="accountº" placeholder="ES12 3456 7890 9876 5432 1234" type="text" class="form-control" regexInput="^ES\d{2}\s\d{4}\s\d{4}\s\d{4}\s\d{4}\s\d{4}$">
+              <input [(ngModel)]="account" name="account" placeholder="ES12 3456 7890 9876 5432 1234" type="text" class="form-control" regexInput="^ES\d{2}\s\d{4}\s\d{4}\s\d{4}\s\d{4}\s\d{4}$">
             </div>
           </div>
           <div class="mb-3 row">
