--- a/src/app/components/qr/qr.component.html
+++ b/src/app/components/qr/qr.component.html
@@ -23,6 +23,9 @@
         <button type="button" class="btn btn-secondary btn-lg" data-bs-toggle="modal" data-bs-target="#closeModal">
             {{"cancel" | translate}}
         </button>
+        <button type="button" class="btn btn-primary" routerLink="/main">
+            {{"end" | translate}}
+        </button>
     </div>
 </div>
 
