--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -5,7 +5,7 @@
 }
 
 .window{
-    margin-top: 10%;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,4 +33,13 @@
     margin-top: -25px;
     position: relative;
     z-index: 2;
+}
+
+.divisor{
+    background: #005442;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 1px;
+    border-radius: 70%;
+    opacity: 0.9;
 }
