--- a/src/app/components/qr/qr.component.scss
+++ b/src/app/components/qr/qr.component.scss
@@ -52,6 +52,13 @@
   margin: 10% 0% 10% 0%;
 }
 
+@media only screen and (min-width: 1024px){
+  .qrContainer{
+    align-self: center;
+    margin: 10px 0% 10px 0%;
+  }
+}
+
 .loading {
   display: flex;
   flex-direction: column;
