--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -27,7 +27,7 @@
           <ng-template #notAvailable>
             <h5 class="card-text" class="text-danger">{{'cashierNotAvailable' | translate}}</h5>
           </ng-template>
-          <button type="button" class="bg-primary text-white border border-0 transactionBtn" (click)="openModal(cashier.id)" data-bs-target="#myModal">
+          <button type="button" class="bg-primary text-white border border-0 transactionBtn" *ngIf="cashier.available" (click)="openModal(cashier.id)" data-bs-target="#myModal">
             {{'transactions' | translate}}
           </button>
         </div>
