--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -43,3 +43,9 @@
     border-radius: 70%;
     opacity: 0.9;
 }
+
+.parentToast{
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
