--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -32,22 +32,26 @@
 </div>
 
 <!--WRONG TOAST-->
-<div id="WrongToast" class="toast align-items-center text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
-  <div class="d-flex">
-    <div class="toast-body">
-      {{"wrongCredencial" | translate}}
+<div class="parentToast">
+  <div id="WrongToast" class="toast text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="d-flex" style="background-color: rgb(238, 97, 97);">
+      <div class="toast-body">
+        {{"wrongCredencial" | translate}}
+      </div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
-    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
   </div>
 </div>
 
 <!--SUCCESS TOAST-->
-<div id="successToast" class="toast align-items-center text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
-  <div class="d-flex">
-    <div class="toast-body">
-      {{"successCreate" | translate}}
+<div class="parentToast">
+  <div id="successToast" class="toast text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="d-flex" style="background-color: #005442;">
+      <div class="toast-body">
+        {{"successCreate" | translate}}
+      </div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
-    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
   </div>
 </div>
 
