--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,31 +1,86 @@
-<div>
-  <div class="container">
-    <img class="img" src="../../../assets/img/logo-grande-verde.png" alt="logo" width="300">
-  </div>
-  <hr class="divisor">
-  <form [formGroup]="form" (ngSubmit)="auth()">
+<div class="container">
+  <form class="form" [formGroup]="form" (ngSubmit)="auth()">
     <div class="window">
-      <div class="mb-3">
-        <label class="form-label">{{"DNI" | translate}}</label>
-        <input #dniLogin formControlName="dniLogin" type="text" class="form-control" required>
-      </div>
-      <div class="mb-3">
-        <label class="form-label">{{"password" | translate}}</label>
-        <div class="input-group mb-3">
-          <input id="passwordField" #passwordLogin formControlName="passwordLogin" type="password" class="form-control" regexInput="[A-Z]*[a-z]*[0-9]*$" required>
-          <div class="input-group-text">
-            <input class="form-check-input mt-0" type="checkbox" (click)="showPassword('passwordField')" class="toggle-password">
+      <div>
+        <div class="mb-3">
+          <label class="form-label">{{ "user" | translate }}</label>
+          <input
+            #dniLogin
+            formControlName="dniLogin"
+            type="text"
+            class="form-control"
+            required
+          />
+        </div>
+        <div class="mb-3">
+          <label class="form-label">{{ "password" | translate }}</label>
+          <div class="input-group mb-3">
+            <input
+              id="passwordField"
+              #passwordLogin
+              formControlName="passwordLogin"
+              type="password"
+              class="form-control"
+              regexInput="[A-Z]*[a-z]*[0-9]*$"
+              required
+            />
+            <div
+              (click)="showPassword('passwordField')"
+              class="input-group-text"
+            >
+              <svg
+                *ngIf="!showPassWord"
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-eye"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"
+                ></path>
+                <path
+                  d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"
+                ></path>
+              </svg>
+              <svg
+                *ngIf="showPassWord"
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-eye-slash"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M13.359 11.238C15.06 9.72 16 8 16 8s-3-5.5-8-5.5a7.028 7.028 0 0 0-2.79.588l.77.771A5.944 5.944 0 0 1 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.134 13.134 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755-.165.165-.337.328-.517.486l.708.709z"
+                />
+                <path
+                  d="M11.297 9.176a3.5 3.5 0 0 0-4.474-4.474l.823.823a2.5 2.5 0 0 1 2.829 2.829l.822.822zm-2.943 1.299.822.822a3.5 3.5 0 0 1-4.474-4.474l.823.823a2.5 2.5 0 0 0 2.829 2.829z"
+                />
+                <path
+                  d="M3.35 5.47c-.18.16-.353.322-.518.487A13.134 13.134 0 0 0 1.172 8l.195.288c.335.48.83 1.12 1.465 1.755C4.121 11.332 5.881 12.5 8 12.5c.716 0 1.39-.133 2.02-.36l.77.772A7.029 7.029 0 0 1 8 13.5C3 13.5 0 8 0 8s.939-1.721 2.641-3.238l.708.709zm10.296 8.884-12-12 .708-.708 12 12-.708.708z"
+                />
+              </svg>
+            </div>
           </div>
         </div>
+        <div class="mb-3">
+          <button type="submit" class="btn">
+            {{ "login" | translate }}
+          </button>
+        </div>
       </div>
-      <div class="mb-3">
-        <a class="openModal" data-bs-toggle="modal" data-bs-target="#emailModal">{{"forgotPassword" | translate}}</a>
-        <br>
-        <a class="openModal" data-bs-toggle="modal" data-bs-target="#registerModal">{{"createAccount" | translate}}</a>
-      </div>
-      <div class="mb-3">
-        <button type="submit" class="btn">{{"login" | translate}}</button>
-        <button type="reset" class="btn">{{"cancel" | translate}}</button>
+      <div>
+        <div class="mb-3">
+          <a
+            class="openModal"
+            data-bs-toggle="modal"
+            data-bs-target="#registerModal"
+            >{{ "createAccount" | translate }}</a
+          >
+        </div>
       </div>
     </div>
   </form>
@@ -33,92 +88,190 @@
 
 <!--WRONG TOAST-->
 <div class="parentToast">
-  <div id="WrongToast" class="toast text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="d-flex" style="background-color: rgb(238, 97, 97);">
+  <div
+    id="WrongToast"
+    class="toast text-bg-primary border-0"
+    role="alert"
+    aria-live="assertive"
+    aria-atomic="true"
+  >
+    <div class="d-flex" style="background-color: rgb(238, 97, 97)">
       <div class="toast-body">
-        {{"wrongCredencial" | translate}}
+        {{ "wrongCredencial" | translate }}
       </div>
-      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+      <button
+        type="button"
+        class="btn-close btn-close-white me-2 m-auto"
+        data-bs-dismiss="toast"
+        aria-label="Close"
+      ></button>
     </div>
   </div>
 </div>
 
 <!--SUCCESS TOAST-->
 <div class="parentToast">
-  <div id="successToast" class="toast text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="d-flex" style="background-color: #005442;">
+  <div
+    id="successToast"
+    class="toast text-bg-primary border-0"
+    role="alert"
+    aria-live="assertive"
+    aria-atomic="true"
+  >
+    <div class="d-flex" style="background-color: #005442">
       <div class="toast-body">
-        {{"successCreate" | translate}}
+        {{ "successCreate" | translate }}
       </div>
-      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-  </div>
-</div>
-
-<!--Email modal-->
-<div class="modal fade" id="emailModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" #eModal>
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">{{"writeEmail" | translate}}</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <input [(ngModel)]="emailLogin" name="emailLogin" type="email" class="form-control">
-        <p *ngIf="!isValid" style="color: red;">{{"noEmail" | translate}}</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn" data-bs-dismiss="modal">{{"cancel" | translate}}</button>
-        <button (click)="sendMail(emailLogin)" type="button" class="btn">{{"send" | translate}}</button>
-      </div>
+      <button
+        type="button"
+        class="btn-close btn-close-white me-2 m-auto"
+        data-bs-dismiss="toast"
+        aria-label="Close"
+      ></button>
     </div>
   </div>
 </div>
 
 <!--Register modal-->
 <form [formGroup]="formRegister" (ngSubmit)="createAccount()">
-  <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true" #rModal>
+  <div
+    class="modal fade"
+    id="registerModal"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel2"
+    aria-hidden="true"
+    #rModal
+  >
     <div class="modal-dialog">
       <div class="window">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel2">{{"newAccount" | translate}}</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h1 class="modal-title fs-5" id="exampleModalLabel2">
+              {{ "newAccount" | translate }}
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body">
             <div class="mb-3 row">
-              <label class="col-sm-2 col-form-label">{{"DNI" | translate}}</label>
+              <label class="col-sm-2 col-form-label">{{
+                "DNI" | translate
+              }}</label>
               <div class="col-sm-10">
-                <input #dni formControlName="dni" name="dni" placeholder="12345678A" type="text" class="form-control" regexInput="^[0-9]{8}[TRWAGMYFPDXBNJZSQVHLCKE]$">
+                <input
+                  #dni
+                  formControlName="dni"
+                  name="dni"
+                  placeholder="12345678A"
+                  type="text"
+                  class="form-control"
+                  regexInput="^[0-9]{8}[TRWAGMYFPDXBNJZSQVHLCKE]$"
+                />
               </div>
             </div>
             <div class="mb-3 row">
-              <label class="col-sm-2 col-form-label">{{"password" | translate}}</label>
+              <label class="col-sm-2 col-form-label">{{
+                "password" | translate
+              }}</label>
               <div class="col-sm-10">
                 <div class="input-group mb-3">
-                  <input id="createPasswordField" #password formControlName="password" name="password" placeholder="******" type="password" class="form-control" regexInput="^([a-z0-9A-Z]*[<>-´ç`+*^Ç¨_:;,.¡¿?'!|ºª@#·$%&¬/()=[]{}€]?)*$">
-                  <div class="input-group-text">
-                    <input class="form-check-input mt-0" type="checkbox" (click)="showPassword('createPasswordField')" class="toggle-password">
+                  <input
+                    id="createPasswordField"
+                    #password
+                    formControlName="password"
+                    name="password"
+                    placeholder="House_123"
+                    type="password"
+                    class="form-control"
+                    regexInput="^([a-z0-9A-Z]*[<>-´ç`+*^Ç¨_:;,.¡¿?'!|ºª@#·$%&¬/()=[]{}€]?)*$"
+                  />
+                  <div
+                    (click)="showPassword('createPasswordField')"
+                    class="input-group-text"
+                  >
+                    <svg
+                      *ngIf="!showPassWord"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="16"
+                      fill="currentColor"
+                      class="bi bi-eye"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"
+                      ></path>
+                      <path
+                        d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"
+                      ></path>
+                    </svg>
+                    <svg
+                      *ngIf="showPassWord"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="16"
+                      fill="currentColor"
+                      class="bi bi-eye-slash"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="M13.359 11.238C15.06 9.72 16 8 16 8s-3-5.5-8-5.5a7.028 7.028 0 0 0-2.79.588l.77.771A5.944 5.944 0 0 1 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.134 13.134 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755-.165.165-.337.328-.517.486l.708.709z"
+                      />
+                      <path
+                        d="M11.297 9.176a3.5 3.5 0 0 0-4.474-4.474l.823.823a2.5 2.5 0 0 1 2.829 2.829l.822.822zm-2.943 1.299.822.822a3.5 3.5 0 0 1-4.474-4.474l.823.823a2.5 2.5 0 0 0 2.829 2.829z"
+                      />
+                      <path
+                        d="M3.35 5.47c-.18.16-.353.322-.518.487A13.134 13.134 0 0 0 1.172 8l.195.288c.335.48.83 1.12 1.465 1.755C4.121 11.332 5.881 12.5 8 12.5c.716 0 1.39-.133 2.02-.36l.77.772A7.029 7.029 0 0 1 8 13.5C3 13.5 0 8 0 8s.939-1.721 2.641-3.238l.708.709zm10.296 8.884-12-12 .708-.708 12 12-.708.708z"
+                      />
+                    </svg>
                   </div>
                 </div>
               </div>
             </div>
             <div class="mb-3 row">
-              <label class="col-sm-2 col-form-label">{{"account" | translate}}</label>
+              <label class="col-sm-2 col-form-label">{{
+                "account" | translate
+              }}</label>
               <div class="col-sm-10">
-                <input #account formControlName="account" name="account" placeholder="ES12 3456 7890 9876 5432 1234" type="text" class="form-control" regexInput="^ES\d{2}\s\d{4}\s\d{4}\s\d{4}\s\d{4}\s\d{4}$">
+                <input
+                  #account
+                  formControlName="account"
+                  name="account"
+                  placeholder="ES12 3456 7890 9876 5432 1234"
+                  type="text"
+                  class="form-control"
+                  regexInput="^ES\d{2}\s\d{4}\s\d{4}\s\d{4}\s\d{4}\s\d{4}$"
+                />
               </div>
             </div>
             <div class="mb-3 row">
-              <label class="col-sm-2 col-form-label">{{"email" | translate}}</label>
+              <label class="col-sm-2 col-form-label">{{
+                "email" | translate
+              }}</label>
               <div class="col-sm-10">
-                <input #email formControlName="email" name="email" placeholder="doggy@gmail.com" type="email" class="form-control" regexInput="^[A-Z]*[a-z0-9A-Z]*[@]{1}[a-z]*[.]{1}[a-z]*$">
+                <input
+                  #email
+                  formControlName="email"
+                  name="email"
+                  placeholder="Jason24@gmail.com"
+                  type="email"
+                  class="form-control"
+                  regexInput="^[A-Z]*[a-z0-9A-Z]*[@]{1}[a-z]*[.]{1}[a-z]*$"
+                />
               </div>
             </div>
           </div>
           <div class="modal-footer">
-            <button type="reset" class="btn" data-bs-dismiss="modal">{{"cancel" | translate}}</button>
-            <button type="submit" class="btn">{{"send" | translate}}</button>
+            <button type="submit" class="btn btn2">
+              {{ "send" | translate }}
+            </button>
+            <button type="reset" class="btn btn2" data-bs-dismiss="modal">
+              {{ "cancel" | translate }}
+            </button>
           </div>
         </div>
       </div>
