--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,28 +1,57 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 
-@import '../node_modules/leaflet/dist/leaflet.css';
+@import "../node_modules/leaflet/dist/leaflet.css";
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
-
-body{
-    margin:0px;
+body {
+  margin: 0px;
+  @media only screen and (min-width: 1000px) {
+    background-image: url("./assets/img/fondo\ proyecto.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
 }
 .leaflet-touch .leaflet-bar a {
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    background-color: rgba(240, 248, 255, 0.653);
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  background-color: rgba(240, 248, 255, 0.653);
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
+.toastr-center {
+    position: fixed;
+    top: 5%;
+    left: 75%;
+  }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@media only screen and (max-width: 430px) {
+  .toastr-center {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
