--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,7 +1,8 @@
 <app-modal-transaction #tdetail></app-modal-transaction>
 <div class="main">
+    <app-navbar></app-navbar>
     <app-map style="position:absolute;width:100%;height:100%"></app-map>
-    <app-searchbar class="overlaySearchBar"></app-searchbar>
+    <!--<app-searchbar class="overlaySearchBar"></app-searchbar>-->
     <app-radio-slider class="overlaySlider"></app-radio-slider>
 </div>
 
