--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,9 +1,10 @@
 
 .map-container {
   padding: 0;
+  margin-top: 60px;
   width:100%;
-  height:100%;
-  position: relative;
+  height:93.6%;
+  position: absolute;
 }
 .loading {
   display: flex;
