--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,36 +1,31 @@
-<button class="toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" (click)="ngOnInit()">
-  <span class="navbar-toggler-icon"></span>
-</button>
+<div class="empty" *ngIf="!cashiersList.length">No hay resultados</div>
 
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasRightLabel">{{'offices' | translate}}</h5>
-      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+<div class="card mb-2 border border-2 border-primary" *ngFor="let cashier of cashiersList">
+  <ng-template [ngIf]="cashier.photo != null" [ngIfElse]="notImage">
+    <img src="" class="card-img-top" alt="imagen de cajero" />
+  </ng-template>
+  <ng-template #notImage>
+    <div class="image" style="margin-top: 10px; text-align: center;">
+      <img src="./assets/icons/image-not-found.png" style="width: 160px; height: 150px;" class="card-img-top" alt="Image not found" />
     </div>
-    <hr class="divisor">
-    <div class="offcanvas-body" >
-      <div class="card mb-2 border border-2 border-primary" *ngFor="let cashier of cashiers">
-       
-        <ng-template [ngIf]="cashier.photo!=null" [ngIfElse]="notImage">
-          <img src="" class="card-img-top" alt="imagen de cajero">
-        </ng-template>
-        <ng-template #notImage>
-          <img src="./assets/icons/image-not-found.png" height="250" class="card-img-top" alt="Image not found">
-        </ng-template>
-        
-        <div class="card-body">
-          <h4 class="card-title">{{cashier.address}}</h4>
-          <h5 class="card-text">{{cashier.locality}}</h5>
-          <ng-template [ngIf]="cashier.available" [ngIfElse]="notAvailable">
-            <h5 class="card-text" class="text-success">{{'cashierAvailable' | translate}}</h5>
-          </ng-template> 
-          <ng-template #notAvailable>
-            <h5 class="card-text" class="text-danger">{{'cashierNotAvailable' | translate}}</h5>
-          </ng-template>
-          <button type="button" class="bg-primary text-white border border-0 transactionBtn" *ngIf="cashier.available" (click)="openModal(cashier.id)" data-bs-target="#myModal">
-            {{'transactions' | translate}}
-          </button>
-        </div>
-      </div>
-    </div>
+  </ng-template>
+
+  <div class="card-body">
+    <h4 class="card-title">{{ cashier.address }}</h4>
+    <h5 class="card-text">{{ cashier.locality }}</h5>
+    <ng-template [ngIf]="cashier.available" [ngIfElse]="notAvailable">
+      <h5 class="card-text" class="text-success">
+        {{ "cashierAvailable" | translate }}
+      </h5>
+    </ng-template>
+    <ng-template #notAvailable>
+      <h5 class="card-text" class="text-danger">
+        {{ "cashierNotAvailable" | translate }}
+      </h5>
+    </ng-template>
+    <button type="button" class="bg-primary text-white border border-0 transactionBtn" *ngIf="cashier.available"
+      (click)="openModal(cashier.id)" data-bs-target="#myModal">
+      {{ "transactions" | translate }}
+    </button>
+  </div>
 </div>
