--- a/src/app/components/modal-transaction/modal-transaction.component.scss
+++ b/src/app/components/modal-transaction/modal-transaction.component.scss
@@ -1,3 +1,6 @@
+h1 {
+  color: #005442;
+}
 
   .myModal{
     position: absolute;
@@ -16,4 +19,8 @@
   .body{
     display: flex;
     flex-direction: column;
+    .form-control:focus {
+      border-color: #005442;
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(6, 156, 111, 0.6);
+    }
   }
