--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,3 +1,9 @@
+.background {
+  height: 100%;
+  width: 100%;
+  background: url("../../../assets/img/fondo-proyecto.jpg") no-repeat center center;
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -7,7 +13,7 @@
 
 .window {
   margin-top: 30px;
-  align-content: center;
+  align-items: center;
   justify-content: center;
 }
 
