--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,10 +6,16 @@
           <div class="mb-3">
             <label class="form-label">{{ "user" | translate }}</label>
             <input
+              [class.redInput]="
+                this.form.get('dniLogin')?.invalid &&
+                this.form.get('dniLogin')?.touched
+              "
               #dniLogin
               formControlName="dniLogin"
               type="text"
               class="form-control"
+              maxlength="9"
+              minlength="9"
               required
             />
           </div>
@@ -17,6 +23,10 @@
             <label class="form-label">{{ "password" | translate }}</label>
             <div class="input-group mb-3">
               <input
+                [class.redInput]="
+                  this.form.get('passwordLogin')?.invalid &&
+                  this.form.get('passwordLogin')?.touched
+                "
                 id="passwordField"
                 #passwordLogin
                 formControlName="passwordLogin"
@@ -73,9 +83,67 @@
             </button>
           </div>
         </div>
-        <div *ngIf="showSpinner" class="spinner-border text-success" role="status">
-          <span class="visually-hidden">Loading...</span>
+        <div *ngIf="true" id="load">
+          
+                <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="30"
+              height="50"
+              fill="currentColor"
+              class="bi bi-phone-vibrate"
+              viewBox="0 0 15 15"
+            >
+              <path
+                d="M10 3a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4zM6 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h4a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H6z"
+              />
+              <path
+                d="M8 12a1 1 0 1 0 0-2 1 1 0 0 0 0 2zM1.599 4.058a.5.5 0 0 1 .208.676A6.967 6.967 0 0 0 1 8c0 1.18.292 2.292.807 3.266a.5.5 0 0 1-.884.468A7.968 7.968 0 0 1 0 8c0-1.347.334-2.619.923-3.734a.5.5 0 0 1 .676-.208zm12.802 0a.5.5 0 0 1 .676.208A7.967 7.967 0 0 1 16 8a7.967 7.967 0 0 1-.923 3.734.5.5 0 0 1-.884-.468A6.967 6.967 0 0 0 15 8c0-1.18-.292-2.292-.807-3.266a.5.5 0 0 1 .208-.676zM3.057 5.534a.5.5 0 0 1 .284.648A4.986 4.986 0 0 0 3 8c0 .642.12 1.255.34 1.818a.5.5 0 1 1-.93.364A5.986 5.986 0 0 1 2 8c0-.769.145-1.505.41-2.182a.5.5 0 0 1 .647-.284zm9.886 0a.5.5 0 0 1 .648.284C13.855 6.495 14 7.231 14 8c0 .769-.145 1.505-.41 2.182a.5.5 0 0 1-.93-.364C12.88 9.255 13 8.642 13 8c0-.642-.12-1.255-.34-1.818a.5.5 0 0 1 .283-.648z"
+              />
+            </svg>
+            <button class="btn btn-tras" disabled>
+              <span
+                class="spinner-grow spinner-border-sm"
+                role="status"
+                aria-hidden="true"
+              ></span>
+              <span
+                class="spinner-grow spinner-border-sm"
+                role="status"
+                aria-hidden="true"
+              ></span>
+              <span
+                class="spinner-grow spinner-border-sm"
+                role="status"
+                aria-hidden="true"
+              ></span>
+              <span
+                class="spinner-grow spinner-border-sm"
+                role="status"
+                aria-hidden="true"
+              ></span>
+              <span
+                class="spinner-grow spinner-border-sm"
+                role="status"
+                aria-hidden="true"
+              ></span>
+            </button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="30"
+              height="50"
+              fill="currentColor"
+              class="bi bi-bank"
+              viewBox="0 0 15 15"
+            >
+              <path
+                d="m8 0 6.61 3h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.38l.5 2a.498.498 0 0 1-.485.62H.5a.498.498 0 0 1-.485-.62l.5-2A.501.501 0 0 1 1 13V6H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 3h.89L8 0ZM3.777 3h8.447L8 1 3.777 3ZM2 6v7h1V6H2Zm2 0v7h2.5V6H4Zm3.5 0v7h1V6h-1Zm2 0v7H12V6H9.5ZM13 6v7h1V6h-1Zm2-1V4H1v1h14Zm-.39 9H1.39l-.25 1h13.72l-.25-1Z"
+              />
+            </svg>
+             
+            
+          
         </div>
+
         <div>
           <div class="mb-3">
             <a
@@ -91,52 +159,6 @@
   </div>
 </div>
 
-<!--WRONG TOAST-->
-<div class="parentToast">
-  <div
-    id="WrongToast"
-    class="toast text-bg-primary border-0"
-    role="alert"
-    aria-live="assertive"
-    aria-atomic="true"
-  >
-    <div class="d-flex" style="background-color: rgb(238, 97, 97)">
-      <div class="toast-body">
-        {{ "wrongCredencial" | translate }}
-      </div>
-      <button
-        type="button"
-        class="btn-close btn-close-white me-2 m-auto"
-        data-bs-dismiss="toast"
-        aria-label="Close"
-      ></button>
-    </div>
-  </div>
-</div>
-
-<!--SUCCESS TOAST-->
-<div class="parentToast">
-  <div
-    id="successToast"
-    class="toast text-bg-primary border-0"
-    role="alert"
-    aria-live="assertive"
-    aria-atomic="true"
-  >
-    <div class="d-flex" style="background-color: #005442">
-      <div class="toast-body">
-        {{ "successCreate" | translate }}
-      </div>
-      <button
-        type="button"
-        class="btn-close btn-close-white me-2 m-auto"
-        data-bs-dismiss="toast"
-        aria-label="Close"
-      ></button>
-    </div>
-  </div>
-</div>
-
 <!--Register modal-->
 <form [formGroup]="formRegister" (ngSubmit)="createAccount()">
   <div
@@ -147,7 +169,7 @@
     aria-hidden="true"
     #rModal
   >
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="window">
         <div class="modal-content">
           <div class="modal-header">
@@ -168,13 +190,18 @@
               }}</label>
               <div class="col-sm-10">
                 <input
+                  [class.redInput]="
+                    this.formRegister.get('dni')?.invalid &&
+                    this.formRegister.get('dni')?.touched
+                  "
                   #dni
                   formControlName="dni"
                   name="dni"
                   placeholder="12345678A"
                   type="text"
                   class="form-control"
-                  regexInput="^[0-9]{8}[TRWAGMYFPDXBNJZSQVHLCKE]$"
+                  maxlength="9"
+                  minlength="9"
                 />
               </div>
             </div>
@@ -185,6 +212,10 @@
               <div class="col-sm-10">
                 <div class="input-group mb-3">
                   <input
+                    [class.redInput]="
+                      this.formRegister.get('password')?.invalid &&
+                      this.formRegister.get('password')?.touched
+                    "
                     id="createPasswordField"
                     #password
                     formControlName="password"
@@ -192,7 +223,6 @@
                     placeholder="House_123"
                     type="password"
                     class="form-control"
-                    regexInput="^([a-z0-9A-Z]*[<>-´ç`+*^Ç¨_:;,.¡¿?'!|ºª@#·$%&¬/()=[]{}€]?)*$"
                   />
                   <div
                     (click)="showPassword('createPasswordField')"
@@ -243,6 +273,10 @@
               }}</label>
               <div class="col-sm-10">
                 <input
+                  [class.redInput]="
+                    this.formRegister.get('account')?.invalid &&
+                    this.formRegister.get('account')?.touched
+                  "
                   #account
                   formControlName="account"
                   name="account"
@@ -259,13 +293,16 @@
               }}</label>
               <div class="col-sm-10">
                 <input
+                  [class.redInput]="
+                    this.formRegister.get('email')?.invalid &&
+                    this.formRegister.get('email')?.touched
+                  "
                   #email
                   formControlName="email"
                   name="email"
                   placeholder="Jason24@gmail.com"
                   type="email"
                   class="form-control"
-                  regexInput="^[A-Z]*[a-z0-9A-Z]*[@]{1}[a-z]*[.]{1}[a-z]*$"
                 />
               </div>
             </div>
