login and map guards

--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -5,8 +5,8 @@
     <img src="" class="card-img-top" alt="imagen de cajero" />
   </ng-template>
   <ng-template #notImage>
-    <div class="image" style="margin-top: 10px; text-align: center;">
-      <img src="./assets/icons/image-not-found.png" style="width: 160px; height: 150px;" class="card-img-top" alt="Image not found" />
+    <div class="image">
+      <img src="./assets/icons/image-not-found.png" class="card-img-top" alt="Image not found" />
     </div>
   </ng-template>
 
