--- a/src/app/components/details/details.component.scss
+++ b/src/app/components/details/details.component.scss
@@ -62,3 +62,13 @@
     transition: var(--bs-navbar-toggler-transition);
     cursor: pointer;
 }
+
+.card-img-top {
+    width: 160px; 
+    height: 150px;
+}
+
+.image {
+    margin-top: 10px; 
+    text-align: center;
+}
