--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,12 +13,10 @@
                 <button type="button" class="btn-close btn-close-yellow" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-
                 <app-details [cashiersList]="cashierList"></app-details>
 
-                <!--<app-searchbar class="overlaySearchBar"></app-searchbar>
+                <!--<app-searchbar class="overlaySearchBar"></app-searchbar>-->
                 
-                <app-modal-transaction #tdetail></app-modal-transaction>-->
             </div>
         </div>
         <a class="navbar-brand">Posición global</a>
@@ -27,6 +25,6 @@
         <a class="navbar-brand">Transferencias</a>
         <a class="navbar-brand">Depósitos</a>
         <img class="navbar-brand" 
-                src="../../../assets/img/logo-verde.png" alt="Banca March" height="35">
+                src="../../../assets/img/logo-verde.png" alt="IES Banco" height="35">
     </div>
 </nav>
