--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,4 +1,14 @@
 
+@media only screen and (max-width:776px) {
+  .map-container {
+    padding: 0;
+    margin-top: 30px;
+    width:100%;
+    height:93.6%;
+   
+  }
+}
+
 .map-container {
   padding: 0;
   margin-top: 60px;
