--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
             aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Cajeros</h5>
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">{{ "atm" | translate }}</h5>
                 <button type="button" class="btn-close btn-close-yellow" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -19,12 +19,26 @@
                 
             </div>
         </div>
-        <a class="navbar-brand">Posición global</a>
-        <a class="navbar-brand">Cuentas/Recibos</a>
-        <a class="navbar-brand">Tarjetas</a>
-        <a class="navbar-brand">Transferencias</a>
-        <a class="navbar-brand">Depósitos</a>
-        <img class="navbar-brand" 
+        <a class="navbar-brand">{{ "globalPosition" | translate }}</a>
+        <a class="navbar-brand">{{ "accounts" | translate }}/{{ "receipts" | translate }}</a>
+        <a class="navbar-brand">{{ "cards" | translate }}</a>
+        <a class="navbar-brand">{{ "transfers" | translate }}</a>
+        <a class="navbar-brand">{{ "deposits" | translate }}</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <img class="navbar-brand" 
                 src="../../../assets/img/logo-verde.png" alt="IES Banco" height="35">
+        </button>
+          <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                  <li class="dropdown-item" href="#" >Action</li>
+                  <li class="dropdown-item" href="#">Another action</li>
+                  <li class="dropdown-item" href="#">Something else here</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
     </div>
 </nav>
