--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,21 +24,9 @@
         <a class="navbar-brand">{{ "cards" | translate }}</a>
         <a class="navbar-brand">{{ "transfers" | translate }}</a>
         <a class="navbar-brand">{{ "deposits" | translate }}</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <img class="navbar-brand" 
-                src="../../../assets/img/logo-verde.png" alt="IES Banco" height="35">
-        </button>
-          <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li class="dropdown-item" href="#" >Action</li>
-                  <li class="dropdown-item" href="#">Another action</li>
-                  <li class="dropdown-item" href="#">Something else here</li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+        <img class="navbar-brand"
+                src="../../../assets/img/logo-verde.png" alt="Logo" height="35">
+        <img class="fullLogo"
+                src="../../../assets/img/logo-grande-verde.png" alt="IES Banco" height="35">
     </div>
 </nav>
