--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -2,10 +2,10 @@
 @media only screen and (max-width:776px) {
   .map-container {
     padding: 0;
-    margin-top: 30px;
+    margin-top: 54px;
     width:100%;
-    height:93.6%;
-   
+    height:93.8%;
+    position: absolute;
   }
 }
 
@@ -16,6 +16,7 @@
   height:93.6%;
   position: absolute;
 }
+
 .loading {
   display: flex;
   flex-direction: column;
